test/spec_vectors/simd_lane/fail/module_50.wat
(module (func (result i64) (i64x2.extract_lane 255 (v128.const i64x2 0 0))))